[metadata]
name = Flask-Status
version = 1.0.1
author = Nwafor Emmanuel
author_email = nwaforemmanuel005@gmail.com
description = Add status ping route to your Flask Server
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Emmo00/flask-status
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords = flask ping, status ping, status, ping, flask

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
    flask
